artwork fix and gthub security
