# swagger.json
@@ -11,6 +11,7 @@
     "https"
   ],
   "paths": {
+    
     "/artist/": {
       "get": {
         "tags": [
@@ -66,6 +67,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -146,6 +150,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "422": {
             "description": "Unprocessable Entity"
           },
@@ -170,6 +177,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -204,25 +214,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "middleName": {
+                "year": {
                   "example": "any"
                 },
-                "lastName": {
+                "period": {
                   "example": "any"
                 },
-                "yearOfBirth": {
+                "type": {
                   "example": "any"
                 },
-                "yearOfDeath": {
-                  "example": "any"
-                },
-                "country": {
-                  "example": "any"
-                },
-                "sex": {
+                "file": {
                   "example": "any"
                 }
               }
@@ -232,6 +236,12 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -280,25 +290,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "middleName": {
+                "year": {
                   "example": "any"
                 },
-                "lastName": {
+                "period": {
                   "example": "any"
                 },
-                "yearOfBirth": {
+                "type": {
                   "example": "any"
                 },
-                "yearOfDeath": {
-                  "example": "any"
-                },
-                "country": {
-                  "example": "any"
-                },
-                "sex": {
+                "file": {
                   "example": "any"
                 }
               }
@@ -308,6 +312,12 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -330,6 +340,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
